fix: gap of product__info

--- a/src/pages/PageProduct/_pageProduct.scss
+++ b/src/pages/PageProduct/_pageProduct.scss
@@ -5,40 +5,40 @@
   flex-direction: column;
   justify-content: start  ;
   align-content: space-between;
-  border: 1px solid black;
-  border-radius: .3125rem;
+  border: .0625rem solid black;
+  border-radius: 5px;
   @extend .text;
 }
 
 .product{
   &__path {
-    margin: 40px auto;
+    margin: 2.5rem auto;
   }
   &__card{
-    margin: 19.2px;
+    margin: 1.2rem;
     display: grid;
     justify-items: start;
-    grid-template-columns:  5rem 0.7fr 1fr;
+    grid-template-columns:  80px 0.7fr 1fr;
     gap: 4%;
   }
   &__description{
     display: grid;
-    row-gap: 30px;
+    row-gap: 1.875rem;
     &-img{
       width: auto;
       max-width: 100%;
-      min-width: 13rem;
-      min-height: 13rem;
+      min-width: 208px;
+      min-height: 208px;
     }
     &-btn{
       text-align: left;
-      padding: 10px 0 10px 10px;
+      padding: .625rem 0 .625rem .625rem;
     }
   }
   &__info{
     display: flex;
     flex-direction: column;
-    gap: 20px; 
+    gap: 2rem; 
     width: 100%;
     &-price{ 
       display: flex;
@@ -49,7 +49,7 @@
         content: "$";
       }
       >:last-child{
-        margin-left: 2rem;
+        margin-left: 32px;
         text-decoration: line-through;
         opacity: 0.7;
       }
@@ -59,7 +59,7 @@
       >:first-child{
         @extend .title;
       }
-      @media (min-width: 66.25rem) {
+      @media (min-width: 1060px) {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         justify-content: space-between;
@@ -67,23 +67,23 @@
           justify-self: end;
         }
       }
-      @media (max-width: 66.25rem) {
+      @media (max-width: 1060px) {
         grid-template-row: repeat(2, 1fr);
         align-content: space-between;
         gap: 10%;
         >:last-child{
           justify-content: end;
-          font-size: calc(1.25rem + 1vw);
+          font-size: calc(20px + 1vw);
         }
       }
-      @media (max-width: 36.875rem) {
+      @media (max-width: 590px) {
         >:first-child{
           @extend .title;
-          font-size: calc(1.25rem + 1vw);
+          font-size: calc(20px + 1vw);
         }
         >:last-child{
           justify-content: end;
-          font-size: calc(1.25rem + 1vw);
+          font-size: calc(20px + 1vw);
         }
       }
     }
@@ -92,12 +92,12 @@
       align-items: center;
       &:before {
         content: "";
-        width: 18px;
-        height: 18px;
-        margin-right: 10px;
+        width: 1.125rem;
+        height: 1.125rem;
+        margin-right: .625rem;
         border-radius: 50%;
         background: $highlight-color;
-        filter: blur(2.4px);
+        filter: blur(.15rem);
       }
     }
   }
